--- a/css/tribute.css
+++ b/css/tribute.css
@@ -92,7 +92,7 @@ a{
     border: white 3px solid;
     background: rgba(0, 0, 0, 0.75);
 }
-.about{
+.about-shernan{
     margin-left: 4px;
     margin-right: 4px;
     letter-spacing: 1px;
