--- a/css/contact.css
+++ b/css/contact.css
@@ -125,8 +125,10 @@ a{
 }
 
 .info-2 ul li{
+    list-style: none;
     display: inline-block;
     padding: 15px;
+    align-items: center;
 }
 
 .fa-brands{
