--- a/css/contact.css
+++ b/css/contact.css
@@ -105,15 +105,7 @@ a{
     border: 2px solid white;
 }
 
-.me-2{
-    float: right;
-    width: 400px;
-    height: 400px;  
-    box-shadow: 0px 4px 2px 5px #06b7d6;
-    border: 2px solid white;
-}
-
-.info-2{
+.info{
     margin-left: 850px;
     margin-top: -90px;
 }
@@ -122,14 +114,6 @@ a{
     list-style: none;
     display: inline-block;
     padding: 20px;
-}
-
-.info-2 ul li{
-    list-style: none;
-    dislay: inline-block;
-    float: none;
-    padding: 20px;
-    align-items: center;
 }
 
 .fa-brands{
